fix spacing

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -4,4 +4,5 @@ body {
   background-position: left top, right bottom;
   background-repeat: no-repeat, no-repeat;
   background-color: #f0f0f6;
+  background-size: min(420px, 50vw) auto, min(447px, 50vw) auto;
 }
